--- a/chehre/index.html
+++ b/chehre/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="refresh" content="0; URL='https://bihamta.github.io/chehre/'" />
+    <meta http-equiv="refresh" content="0; URL='https://bihamta.github.io/chehre.ai/'" />
     <title>Redirecting...</title>
 </head>
 
 <body>
-    <p>Redirecting to <a href="https://bihamta.github.io/chehre/">thebit.me/chehre</a></p>
+    <p>Redirecting to <a href="https://bihamta.github.io/chehre.ai/">thebit.me/chehre</a></p>
 </body>
 
 </html>
