--- a/chehre/index.html
+++ b/chehre/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -10,4 +10,17 @@
     <p>Redirecting to <a href="https://bihamta.github.io/chehre.ai/">thebit.me/chehre</a></p>
 </body>
 
+</html> -->
+
+<!-- thebit.me/chehre/index.html -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="refresh"
+            content="0; URL='https://bihamta.github.io/chehre.ai/phase1/'" />
+        <title>Redirecting...</title>
+    </head>
+    <body>
+        Redirecting to Phase 1 experiment…
+    </body>
 </html>
