--- a/chehre/index.html
+++ b/chehre/index.html
@@ -17,7 +17,7 @@
 <html>
     <head>
         <meta http-equiv="refresh"
-            content="0; URL='https://bihamta.github.io/chehre.ai/phase1/'" />
+            content="0; URL='https://bihamta.github.io/chehre.ai/perform/'" />
         <title>Redirecting...</title>
     </head>
     <body>
