--- a/chehre/perceive/index.html
+++ b/chehre/perceive/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="refresh"
-            content="0; URL='https://bihamta.github.io/chehre.ai/percieve/'" />
+            content="0; URL='https://bihamta.github.io/chehre.ai/perceive/'" />
         <title>Redirecting...</title>
     </head>
     <body>
